--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AppSample</string>
     <string name="action_settings">Settings</string>
     <string name="clique_para_conectar">Clique para Conectar</string>
+    <string name="bem_vindo_a_sua_casa">Bem Vindo a sua Casa</string>
 </resources>
